[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Carl D. Benson <carl.d.benson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
itertools = "0.8.2"
intcode = { path = "intcode" }
common = { path = "common" }
