[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Carl D. Benson <carl@arccosgolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
itertools = "0.9.0"
lazy_static = "1.4.0"
nom = "6.0.1"
parse-display = "0.4.0"
regex = "1.4.2"

[lib]
name = "utils"
path = "src/utils.rs"
