[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Carl D. Benson <carl@arccosgolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
bitflags = "1.3.2"
gcd = "2.0.2"
itertools = "0.10.1"
lazy_static = "1.4.0"
nom = "7.1.0"
num = "0.4.0"
parse-display = "0.4.0"
pathfinding = "3.0.3"
regex = "1.4.2"

[lib]
name = "utils"
path = "src/utils.rs"
