[package]
name = "aoc2022"
version = "0.1.0"
authors = ["Carl D. Benson <carl.d.benson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
bitflags = "1.3.2"
gcd = "2.0.2"
gcollections = "1.5.0"
intervallum = "1.4.0"
itertools = "0.10.1"
lazy_static = "1.4.0"
nom = "7.1.0"
num = "0.4.0"
parse-display = "0.6.0"
pathfinding = "4.0.0"
regex = "1.4.2"

[lib]
name = "utils"
path = "src/utils.rs"
